closed #2 spend 10 hours

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -1,2 +1,3 @@
-# default values
-#all:
+#default values
+all:
+  map_key: ABQIAAAA8wGhpYTzhzuU6t9zcf0f9RTRkADJtHLtgosa3gIacxHGEJbD2RS6P-Ki8BWqPluPZtn1FirDTUhAAw
