--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -3,15 +3,15 @@ default:
     content-type: text/html
 
   metas:
-    #title:        symfony project
-    #description:  symfony project
-    #keywords:     symfony, project
-    #language:     en
-    #robots:       index, follow
+    title:        symfony project
+    description:  symfony project
+    keywords:     symfony, project
+    language:     en
+    robots:       index, follow
 
-  stylesheets:    [main.css]
+  stylesheets:    [main]
 
-  javascripts:    []
+  javascripts:    [lib/jquery,moduleManager]
 
   has_layout:     true
   layout:         layout
