--- a/apps/frontend/config/settings.yml
+++ b/apps/frontend/config/settings.yml
@@ -30,3 +30,7 @@ all:
 
     # Cache settings
     lazy_cache_key:         true        # Delays creation of a cache key until after checking whether an action or partial is cacheable
+
+    default_culture:        ru_RU
+    charset:                utf-8
+    i18n:                   true
