added sfguard now all profile related object has ref to it spend 1 hour

--- a/apps/frontend/config/settings.yml
+++ b/apps/frontend/config/settings.yml
@@ -21,6 +21,13 @@ test:
 
 all:
   .settings:
+    enabled_modules:      [default, sfGuardAuth]
+    login_module:           sfGuardAuth
+    login_action:           signin
+
+    secure_module:          sfGuardAuth
+    secure_action:          secure
+
     # Form security secret (CSRF protection)
     csrf_secret:       d848e27bd011d040b339b721ccd7193ec6652b74     # Unique secret to enable CSRF protection or false to disable
 
