--- a/data/fixtures/data.yml
+++ b/data/fixtures/data.yml
@@ -3,7 +3,7 @@ Profile:
     nick_name: lim
     first_name: lim
     last_name: lim
-    description: ddddddddddd
+    sfGuardUser: sfGuardUser_1
     created_at: '0000-00-00 00:00:00'
     updated_at: '0000-00-00 00:00:00'
 Comment: {  }
@@ -210,14 +210,8 @@ sfGuardPermission:
 sfGuardUser:
   sfGuardUser_1:
     username: admin
-    algorithm: sha1
-    salt: 9af2fa906ff83ab10c16c74acfc33c5e
-    password: aca5146b97f54e511002a28bea6a13ffebfef9bd
-    is_active: true
+    password: admin
     is_super_admin: true
-    last_login: null
-    created_at: '2010-04-03 22:59:54'
-    updated_at: '2010-04-03 22:59:54'
 sfGuardUserGroup:
   sfGuardUserGroup_1_1:
     sfGuardUser: sfGuardUser_1
