--- a/config/databases.yml
+++ b/config/databases.yml
@@ -5,4 +5,6 @@ all:
       dsn:      mysql:host=localhost;dbname=FISHERY
       username: root
       password:
-      encoding:   utf8
+      encoding: utf8
+      collate: utf8_unicode_ci
+      charset: utf8
