--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -9,7 +9,7 @@ default:
     language:     en
     robots:       index, follow
 
-  stylesheets:    [main]
+  stylesheets:    [main,location,comment,profile,rating]
 
   javascripts:    [lib/jquery-1.4.2.js,lib/jqueryBlockUI,lib/jqueryColor,lib/jqueryJSON,moduleManager]
 
