--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -1,2 +1,3 @@
 all:
-  map_key: ABQIAAAA8wGhpYTzhzuU6t9zcf0f9RTRkADJtHLtgosa3gIacxHGEJbD2RS6P-Ki8BWqPluPZtn1FirDTUhAAw
+  sf_guard_plugin:
+    algorithm_callable: [PasswordKeeper, generate]
