--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -11,7 +11,7 @@ default:
 
   stylesheets:    [lib/datepicker,main,location,comment,profile,rating,profit,user,inbox,talk,pager]
 
-  javascripts:    [lib/jquery-1.4.2.js,lib/jqueryBlockUI,lib/jqueryColor,lib/jqueryJSON,lib/datepicker,moduleManager]
+  javascripts:    [lib/jquery-1.4.2.js,lib/jqueryBlockUI,lib/jqueryColor,lib/jqueryJSON,lib/datepicker,app,moduleManager]
 
   has_layout:     true
   layout:         layout
