--- a/config/doctrine/fisheryYAML.yml
+++ b/config/doctrine/fisheryYAML.yml
@@ -689,6 +689,51 @@ VoteTalk:
     Talk:
       local: talk_id
       foreign: id
+FishEvent:
+  columns:
+    id:
+      primary: true
+      type: integer(4)
+      notnull: true
+      autoincrement: true
+    name:
+      type: string(50)
+      notnull: true
+    description:
+      type: string
+      notnull: true
+    location_id:
+      type: integer(4)
+  relations:
+    Location:
+      local: location_id
+      foreign: id
+VoteFishEvent:
+  inheritance:
+    type: column_aggregation
+    extends: Vote
+    keyField: toward
+    keyValue: fish_event
+  columns:
+    fish_event_id:
+      type: integer(4)
+  relations:
+    FishEvent:
+      local: fish_event_id
+      foreign: id
+CommentFishEvent:
+  inheritance:
+    type: column_aggregation
+    extends: Comment
+    keyField: toward
+    keyValue: fish_event
+  columns:
+    FishEvent_id:
+      type: integer(4)
+  relations:
+    FishEvent:
+      local: FishEvent_id
+      foreign: id
 options:
   type: INNODB
   charset: utf8
