formi fixed profile fixed rega fixed

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -2,6 +2,8 @@ all:
   sf_guard_plugin:
     algorithm_callable: [PasswordKeeper, generate]
     signin_form: FloginForm
+  sfForkedApply:
+    applyForm: FRegistrationForm
   sfApplyPlugin:
     from:
       mail_editable: false
