--- a/apps/frontend/config/factories.yml
+++ b/apps/frontend/config/factories.yml
@@ -30,8 +30,19 @@ test:
 
 dev:
   mailer:
+    class: sfMailer
     param:
-      delivery_strategy: none
+      logging:           %SF_LOGGING_ENABLED%
+      charset:           %SF_CHARSET%
+      delivery_strategy: realtime
+      transport:
+        class: Swift_SmtpTransport        
+        param:
+          host:       localhost
+          port:       25
+          encryption: ~
+          username:   ~
+          password:   ~
 
 all:
   routing:
